--- a/css/login.css
+++ b/css/login.css
@@ -8,7 +8,7 @@
 
 body
 {
-	background-color: #E93735;
+	background-color: #44B9EF;
 }
 
 .menubars,.navbar-brand
@@ -37,55 +37,25 @@ transition: all 500ms ease;
 {
 	font-size: 16px;
 }
-.big-header
+
+form
 {
-	font-size: 80px;
-	font-weight: 600;
-	color: white;
-}
-.contact-description
-{
-	font-size: 25px;
-	color: white;
+	margin-top: 15%;
+	
+	width: 30%;
+	min-width: 284.39px !important;
+	background-color: #F5FAFE;
 }
 
-.col-sm-6
+.form-content
 {
-	color: white;
+	padding: 20px 33px 1px 33px;
 }
-#contact-container
-{
-	margin-top: 50px;
-}
-
-.text-box
-{
-	display: block;
-	outline: 0;
-	color: #ffffff;
-	font-size: 12px;
-	background: rgba(255,255,255, 0.35);
-	border: 0;
-	border-radius: 2px;
-	height: 23px;
-	margin-top: 10px;
-	width: 350px;
-	padding-left: 4px;
-}
-#message-box
-{
-	height: 50px;
-}
-
 .btn
 {
-	margin-top: 10px;
-	background-color: black;
-	color: #ffffff;
-	border-radius: 0px;
-	border: 0;
-	margin-right: 6px;
-	font-family: 'Rubik', sans-serif;
+	background-color: #54B1A9;
+	color: #EFFFFF;
+	border-radius: 4px;
 	-webkit-transition: all 500ms ease;
 -moz-transition: all 500ms ease;
 -ms-transition: all 500ms ease;
@@ -94,6 +64,19 @@ transition: all 500ms ease;
 }
 .btn:hover
 {
-	font-size: 15px;
-	color: white;
+	color: #54B1A9;
+	background-color: #EFFFFF;
+	border-color: #54B1A9;
+	-webkit-transition: all 500ms ease;
+-moz-transition: all 500ms ease;
+-ms-transition: all 500ms ease;
+-o-transition: all 500ms ease;
+transition: all 500ms ease;
+}
+
+label
+{
+	
+	font-size: 12px;
+	color: #63676A;
 }
